# CoinVault

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CLEANUP-LIST.md  GEMINI.md  PLAN.md  QUICKREF.md  README.md  REVIEW-SUMMARY.md  SECURITY-REVIEW.md  SETUP-GUIDE.md  package-lock.json  package.json  quickstart.md
.claude/: settings.local.json
.specify/: feature.json  init-options.json  integration.json
backend/: pyproject.toml
backend/migrations/: 001_auth_schema.sql  002_profiles.sql  003_sessions.sql  004_audit_log.sql
backend/src/coinvault/: __init__.py  main.py
backend/src/coinvault/api/: auth.py  categories.py  health.py  items.py
backend/src/coinvault/core/: config.py  logging.py
backend/src/coinvault/db/seeds/: run_seeds.py
backend/src/coinvault/middleware/: auth_middleware.py  error_handler.py
backend/src/coinvault/models/: auth.py  category.py  item.py  session.py  user.py
backend/src/coinvault/services/: __init__.py  admin_health.py  auth_health.py  auth_service.py  category_service.py  database_health.py  item_service.py  migration_health.py  rate_limiter.py  session_service.py  storage_health.py  supabase_client.py
backend/tests/integration/: test_auth_endpoints.py  test_categories_api.py  test_health_endpoint.py  test_items_api.py  test_oauth_endpoints.py  test_protected_endpoints.py  test_rbac.py  test_release_validation.py
backend/tests/unit/: test_auth_middleware.py  test_auth_service.py  test_categories_db.py  test_config.py  test_docs_deployment_scope.py  test_env_example.py  test_health_models.py  test_items_db.py  test_oauth_service.py  test_rate_limiter.py  test_session_service.py
(+101 files in other folders)
