[project]
name = "coinvault-backend"
version = "0.1.0"
description = "FastAPI local foundation for CoinVault"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136,<0.137",
  "pydantic>=2.11,<3",
  "python-dotenv>=1.0,<2",
  "uvicorn[standard]>=0.34,<0.35"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<0.29",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
