[project]
name = "coinvault-backend"
version = "0.1.0"
description = "FastAPI local foundation for CoinVault"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136,<0.137",
  "pydantic>=2.11,<3",
  "python-dotenv>=1.0,<2",
  "uvicorn[standard]>=0.34,<0.35",
  "supabase>=2.13,<3",
  "slowapi>=0.1,<0.2",
  "alembic>=1.14,<2",
  "email-validator>=2.2,<3"
]

[project.optional-dependencies]
dev = [
  "black>=25.1,<26",
  "httpx>=0.28,<0.29",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6.0,<7",
  "ruff>=0.9,<1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
